tests/NormalTests/paczka1/fuzzy1/71204648.err
Error in line 1: A3 S220 86,2
Error in line 2: A3 S220 3,4
Error in line 3: gSbq S448 84,9
Error in line 4: QIuKHFVM S220 43,4
Error in line 5: gSbq S220 49,1
Error in line 13: ITlyth S220 -5,4
Error in line 6: ITlyth S220 76,9
Error in line 20: 4pFwrxTVCPa S448 32,0
Error in line 25: QIuKHFVM S863 -1,2
Error in line 27: A3 S863 64,0
Error in line 28: A3 S863 12,2
Error in line 33: A3 S448 34,3
Error in line 30: QIuKHFVM S863 237,2
Error in line 37: A3 S448 149,5
